fix keyboard spacing

--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,11 @@ main, #reset-button {
   width: 6vmin;
 }
 
-.keyboard {
+#keyboard {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 0.5vmin;
   height: 19.5vmin; 
   font-size: 3vmin;
